--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   ],
   "author": {
     "name": "Joakim Carlstein",
-    "email": "joakim@klei.se"
+    "email": "joakim@beng.se",
+    "url": "http://joakim.beng.se"
   },
   "license": "MIT",
   "devDependencies": {
     "ava": "^0.12.0",
-    "sliced": "^1.0.1",
     "xo": "^0.12.1"
   },
   "repository": "joakimbeng/promise-fnapply",
